# NPU-AI

./: .gitignore  LICENSE  README.md  build.bat  build.py  build.spec  build_all.py  build_all.spec  build_desktop.bat  make_all_exe.bat  make_all_exe.py  make_build_exe.bat  make_installer.bat  pyproject.toml  pyrightconfig.json  requirements-windows-build-arm64.txt  requirements-windows-build.txt  requirements.txt  run.bat  setup.bat
installer/: build_installer.bat  setup.iss
models/: .gitkeep
scripts/: __init__.py  build_all_exe.py  build_app.py  build_installer.py  common.py  fetch_windows_exe_desktop.sh  fetch_windows_exe_workspace.ps1  fetch_windows_exe_workspace.sh  fetch_windows_release_zip.py  launcher.py  run_app.py  setup_app.py
src/: __init__.py  app.py  hotkeys.py  main.py  preset_compare.py  preset_io.py  presets.py  profiles.py  session_history.py  settings.py
tests/: test_ab_compare.py  test_app_resample.py  test_app_shutdown.py  test_audio_processor.py  test_capture_wasapi_fallback.py  test_clip_indicator.py  test_effects.py  test_eq_visualizer.py  test_export_queue.py  test_file_io.py  test_format_converter.py  test_hotkeys.py  test_models_registry.py  test_no_ctypes_desktop_shell.py  test_npu.py  test_npu_engine_helpers.py  test_output_carry.py  test_player.py  test_preset_compare.py  test_preset_io.py  test_presets.py  test_processor.py  test_profiler.py  test_profiles.py  test_recommender_feature_keys_static.py  test_recommender_streaming.py  test_regression_audio_effects.py  test_scripts_common.py  test_scripts_common_helpers.py  (+5 more)
(+47 files in other folders)
