[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "npu-audio-enhancer"
version = "1.0.0"
description = "ARM64 Snapdragon X NPU-accelerated real-time audio enhancer for Spotify, Apple Music, and YouTube Music"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "NPU-AI Team"}]

dependencies = [
    "PyQt6>=6.6.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "sounddevice>=0.4.6",
    "onnx>=1.15.0",
    "onnxruntime-directml>=1.17.0",
    "librosa>=0.10.1",
    "torch>=2.2.0",
    "torchaudio>=2.2.0",
    "scikit-learn>=1.4.0",
    "pyyaml>=6.0",
    "psutil>=5.9.0",
    "pyinstaller>=6.3.0",
    "comtypes>=1.3.0",
    "pycaw>=20240210",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "black>=24.0",
    "ruff>=0.2.0",
]

[project.scripts]
npu-audio-enhancer = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.black]
line-length = 100
target-version = ["py311"]
